--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Assignment</title>
   </head>
   <body>
-    <h1>First Assignment for today</h1>
+    <h1>First Assignment for today is not completed</h1>
   </body>
 </html>
